--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -10,15 +10,17 @@ library(here)
 library(janitor)
 library(ggExtra)
 ```
+
 ## Read in the data from the Duck
+
 ```{r}
-Q1 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca1-Bisley.csv" )) %>% clean_names()
+Q1 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca1-Bisley.csv" ), na = "-9999") %>% clean_names()
 
-Q2 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca2-Bisley.csv")) %>% clean_names()
+Q2 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca2-Bisley.csv"), na = "-9999") %>% clean_names()
 
-Q3 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca3-Bisley.csv")) %>% clean_names()
+Q3 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca3-Bisley.csv"), na = "-9999") %>% clean_names()
 
-RPM <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "RioMameyesPuenteRoto.csv")) %>% clean_names()
+RPM <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "RioMameyesPuenteRoto.csv"), na = "-9999") %>% clean_names()
 
 ```
 
