--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -46,12 +46,22 @@ RPM.1 <- RPM %>%
 
 # pulling out the year from the sample_date column
 ```{r}
-Q1.1 <- Q1.1 %>% mutate(sample_date = lubridate::year(sample_date))
-Q2.1 <- Q2.1 %>% mutate(sample_date = lubridate::year(sample_date))
-Q3.1 <- Q3.1 %>% mutate(sample_date = lubridate::year(sample_date))
-RPM.1 <- RPM.1 %>% mutate(sample_date = lubridate::year(sample_date)) 
+Q1.1 <- Q1.1 %>%
+  mutate(sample_year = lubridate::year(sample_date)) %>% 
+  mutate(sample_month = lubridate::month(sample_date))
+
+Q2.1 <- Q2.1 %>%
+  mutate(sample_year = lubridate::year(sample_date)) %>% 
+  mutate(sample_month = lubridate::month(sample_date))
+
+Q3.1 <- Q3.1 %>%
+  mutate(sample_year = lubridate::year(sample_date)) %>% 
+  mutate(sample_month = lubridate::month(sample_date))
 
 
+RPM.1 <- RPM.1 %>%
+  mutate(sample_year = lubridate::year(sample_date)) %>% 
+  mutate(sample_month = lubridate::month(sample_date))
 
 ```
 
@@ -68,7 +78,10 @@ combined_sites <- rbind(combined_site_ab, combined_site_cd)
 ## Take summary statistics so we can plot one point per year for each variable
 
 ```{r}
-## summary stats!!
+combined_sites_summarize <- combined_sites %>% 
+  group_by(sample_id, sample_month) %>% 
+  summarize(mean_k = mean(k), na.rm = TRUE,
+            mean_no3 = mean(no3), na.rm = TRUE)
 ```
 
 ## plot the data!
