--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -79,7 +79,7 @@ combined_sites <- rbind(combined_site_ab, combined_site_cd)
 
 ```{r}
 combined_sites_summarize <- combined_sites %>% 
-  group_by(sample_id, sample_year, sample_month) %>% 
+  group_by(sample_id, sample_year) %>% 
   summarize(mean_k = mean(k, na.rm = TRUE),
             mean_no3 = mean(no3, na.rm = TRUE))
 ```
@@ -88,18 +88,20 @@ combined_sites_summarize <- combined_sites %>%
 
 ```{r}
 
-
 ggplot(data = combined_sites_summarize, aes(x = sample_year, y = mean_k)) +
   geom_line(aes(color = sample_id)) +
   labs(x = "Year",
-       y = "K (mg/l",
-       title = "Potassium levels over time")
+       y = "K (mg/l)",
+       title = "Potassium levels over time") +
+  theme_classic()
 
-ggplot(data = combined_sites, aes(x = sample_date, y = no3)) +
-  geom_line(aes(line = sample_id)) +
+ggplot(data = combined_sites_summarize, aes(x = sample_year, y = mean_no3)) +
+  geom_line(aes(color = sample_id)) +
   labs(x = "Year",
        y = "Nitrate (ug/l)",
-       title = "Nitrate levels over time")
+       title = "Nitrate levels over time") +
+  theme_classic()
+  
 
 
 
