--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -125,16 +125,20 @@ combined_sites_summarize <- combined_sites %>%
             mean_no3 = mean(no3, na.rm = TRUE))
 
 
-combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, "MPR",
+combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, 
+                                                  "MPR",
                                                   "Puente Roto Mameyes")
 
-combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, "Q1",
+combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, 
+                                                  "Q1",
                                                   "Quebrada uno-Bisley")
 
-combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, "Q2",
+combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, 
+                                                  "Q2",
                                                   "Quebrada dos-Bisley")
 
-combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, "Q3",
+combined_sites_summarize$sample_id <- str_replace(combined_sites_summarize$sample_id, 
+                                                  "Q3",
                                                   "Quebrada tres-Bisley")
 
 combined_sites_summarize$sample_id <- factor(combined_sites_summarize$sample_id, 
