--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "eco-warriors"
+title: "Eco-Warriors"
 output: html_document
 ---
 
@@ -13,26 +13,29 @@ library(lubridate)
 library(patchwork)
 ```
 
-## Read in the data from the Duck
+## Read in the data from THE Duck
 ## Clean names with Janitor package
 ## Tell R NA values are read as -9999
 
 ```{r}
-Q1 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca1-Bisley.csv" ), na = "-9999") %>% 
+Q1 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca1-Bisley.csv" ), 
+               na = "-9999") %>% 
   
   clean_names() %>% 
   
   mutate(sample_date = mdy(sample_date))
 
 
-Q2 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca2-Bisley.csv"), na = "-9999") %>% 
+Q2 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca2-Bisley.csv"), 
+               na = "-9999") %>% 
   
   clean_names() %>% 
   
   mutate(sample_date = mdy_hm(sample_date))
 
 
-Q3 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca3-Bisley.csv"), na = "-9999") %>% 
+Q3 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca3-Bisley.csv"), 
+               na = "-9999") %>% 
   
   clean_names() %>% 
   
@@ -40,14 +43,16 @@ Q3 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenc
 
 
 
-RPM <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "RioMameyesPuenteRoto.csv"), na = "-9999") %>% 
+RPM <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "RioMameyesPuenteRoto.csv"), 
+                na = "-9999") %>% 
   
   clean_names() %>% 
   
   mutate(sample_date = mdy(sample_date))
 
 ```
-## select columns
+
+## select columns for sample_id,  sample_date, k, no3
 ```{r}
 
 Q1.1 <- Q1 %>% 
@@ -76,30 +81,25 @@ RPM.1 <- RPM %>%
 ```{r}
 Q1.1 <- Q1.1 %>%
   
-  mutate(sample_year = lubridate::year(sample_date)) %>% 
-  
-  mutate(sample_month = lubridate::month(sample_date))
+  mutate(sample_year = lubridate::year(sample_date)) 
+
 
 
 Q2.1 <- Q2.1 %>%
   
-  mutate(sample_year = lubridate::year(sample_date)) %>% 
-  
-  mutate(sample_month = lubridate::month(sample_date))
+  mutate(sample_year = lubridate::year(sample_date))
+
 
 
 Q3.1 <- Q3.1 %>%
   
-  mutate(sample_year = lubridate::year(sample_date)) %>% 
+  mutate(sample_year = lubridate::year(sample_date))
   
-  mutate(sample_month = lubridate::month(sample_date))
-
+  
 
 RPM.1 <- RPM.1 %>%
   
-  mutate(sample_year = lubridate::year(sample_date)) %>% 
-  
-  mutate(sample_month = lubridate::month(sample_date))
+  mutate(sample_year = lubridate::year(sample_date)) 
 
 ```
 
@@ -115,7 +115,7 @@ combined_sites <- rbind(combined_site_ab, combined_site_cd)
 ```
 
 ## Take summary statistics so we can plot one point per year for each variable
-
+## Replace abbreviated site names with full name
 ```{r}
 combined_sites_summarize <- combined_sites %>% 
   
@@ -149,7 +149,7 @@ combined_sites_summarize$sample_id <- factor(combined_sites_summarize$sample_id,
 
 ```
 
-## plot the data!
+## Make a sexy figure!
 
 ```{r}
 # Potassium graph 
