--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -3,7 +3,7 @@ title: "Eco-Warriors"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, class.source = 'fold-hide'}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(here)
@@ -17,7 +17,7 @@ library(patchwork)
 ## Clean names with Janitor package
 ## Tell R NA values are read as -9999
 
-```{r}
+```{r, class.source = 'fold-hide', include=FALSE}
 Q1 <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "QuebradaCuenca1-Bisley.csv" ), 
                na = "-9999") %>% 
   
@@ -53,7 +53,7 @@ RPM <- read.csv(here("/courses", "EDS214", "eco-warriors", "data", "RioMameyesPu
 ```
 
 ## select columns for sample_id,  sample_date, k, no3
-```{r}
+```{r, collapse=T}
 
 Q1.1 <- Q1 %>% 
   
@@ -78,7 +78,7 @@ RPM.1 <- RPM %>%
 ```
 
 # pulling out the year from the sample_date column
-```{r}
+```{r, collapse=T}
 Q1.1 <- Q1.1 %>%
   
   mutate(sample_year = lubridate::year(sample_date)) 
@@ -106,7 +106,7 @@ RPM.1 <- RPM.1 %>%
 
 # Binding the datasets together into one data frame
 
-```{r}
+```{r, collapse=T}
 combined_site_ab <- rbind(Q1.1, Q2.1)
 
 combined_site_cd <- rbind(Q3.1, RPM.1)
@@ -116,7 +116,7 @@ combined_sites <- rbind(combined_site_ab, combined_site_cd)
 
 ## Take summary statistics so we can plot one point per year for each variable
 ## Replace abbreviated site names with full name
-```{r}
+```{r, collapse=T}
 combined_sites_summarize <- combined_sites %>% 
   
   group_by(sample_id, sample_year) %>% 
@@ -151,14 +151,16 @@ combined_sites_summarize$sample_id <- factor(combined_sites_summarize$sample_id,
 
 ## Make a sexy figure!
 
-```{r}
+```{r, collapse=T}
 # Potassium graph 
 k_graph <- ggplot(data = combined_sites_summarize, aes(x = sample_year, y = mean_k)) +
   geom_line(aes(color = sample_id, linetype = sample_id)) +
+  geom_vline(xintercept = (1989), 
+             linetype = "dashed") +
   labs(x = "Year",
        y = "K (mg/l)",
        title = "Stream Water Potassium and Nitrate Levels",
-       subtitle = "Luquillo Mountains, Puerto Rico 1989-2012",
+       subtitle = "Luquillo Mountains, Puerto Rico 1986-2012",
        color = "Site",
        linetype = "Site") +
   theme_classic() + 
@@ -173,6 +175,8 @@ k_graph <- ggplot(data = combined_sites_summarize, aes(x = sample_year, y = mean
 # Nitrate graph
 no3_graph <- ggplot(data = combined_sites_summarize, aes(x = sample_year, y = mean_no3)) +
   geom_line(aes(color = sample_id, linetype = sample_id)) +
+  geom_vline(xintercept = (1989), 
+             linetype = "dashed") + 
   labs(x = element_blank(),
        y = "Nitrate (ug/l)",
        title = element_blank(),
