Added cold folding capabilities

--- a/Eco-warriors.Rmd
+++ b/Eco-warriors.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Eco-Warriors"
-output: html_document
+output: 
+  html_document: 
+    code_folding: hide
+
 ---
 
 ```{r setup, class.source = 'fold-hide'}
